Changes in 0.80.3:
  o Build Changes:
    * Java dependencies now properly ignore array elements in all cases,
      removing false Java dependencies like "[[I" and "[[B".

Changes in 0.80.2:
  o Client Changes:
    * Bugs in "conary update foo=<old>--<new>" behavior have been
      fixed.
    * "cvc co foo=<label>" will now work even if you don't have a
      buildLabel set
    * "conary showcs" will now work more nicely with group changesets.
    * "conary showcs --all" no longer shows ids and sha1s.
    * We now never erase pinned items until they are explicitly unpinned.
    * "conary verify" and "conary q --diff" work again.
    * "conary q tmpwatch --components" will display the components
      installed for a package.
    * The pinTroves config item behavior has been fixed.  It now
      consistently pins all troves that match a pinTrove line.
    * When a trove is left on the system because of dependency resolution
      during an update, a warning message is printed.
    * Command line configuration, such as --config 
      'buildLabel conary.rpath.com@rpl:devel', now overrides context 
      configuration.

  o Server Changes:
    * The repository server now retries a request as an anonymous user
      if the provided user authentication information does not allow
      a client request to succeed.
    * When using "server.py --add-user" to add a user to a repository
      server, the user will only be given admin privileges if --admin
      is added to the command line.  Previously, all users added with
      server.py had admin privileges.  Additionally, if the username
      being added is "anonymous", write access is not granted.

  o Build Changes:
    * It is now possible for a recipe to request that specific
      individual requirements be removed from files using the
      exceptDeps keyword argument to r.Requires().  Previously
      you had to accept all the dependencies generated by r.Requires()
      or none of them.