@@ -1,4 +1,8 @@
 Changes in 0.80.3:
+  o Client Changes:
+    * Only interactive mode can create binary shadows and branches, and
+      a warning is displayed before they are created (since source branches
+      are normally the right thing to use).
   o Build Changes:
     * Java dependencies now properly ignore array elements in all cases,
       removing false Java dependencies like "[[I" and "[[B".
